--- a/index.html
+++ b/index.html
@@ -39,424 +39,4 @@
             width: 100%;
             padding: 0.75rem 1rem;
             border: 1px solid #cbd5e1;
-            border-radius: 0.75rem;
-            font-size: 1rem;
-            color: #475569;
-            transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-        }
-        .input-group input[type="file"]:focus,
-        .input-group input[type="text"]:focus {
-            outline: none;
-            border-color: #3b82f6;
-            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.25);
-        }
-        .btn {
-            padding: 0.75rem 1.5rem;
-            border-radius: 0.75rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: background-color 0.2s ease-in-out, transform 0.1s ease-in-out;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.5rem;
-        }
-        .btn-primary {
-            background-color: #3b82f6;
-            color: #ffffff;
-        }
-        .btn-primary:hover {
-            background-color: #2563eb;
-            transform: translateY(-1px);
-        }
-        .btn-primary:active {
-            transform: translateY(0);
-        }
-        canvas {
-            border: 1px solid #e2e8f0;
-            border-radius: 0.75rem;
-            background-color: #f8fafc;
-            display: block;
-            max-width: 100%;
-            height: auto;
-            margin: 0 auto;
-            cursor: grab;
-        }
-        canvas.dragging {
-            cursor: grabbing;
-        }
-        .message-box {
-            background-color: #fffbeb;
-            border: 1px solid #fcd34d;
-            color: #b45309;
-            padding: 1rem;
-            border-radius: 0.75rem;
-            margin-top: 1rem;
-            display: none;
-        }
-        .message-box.show {
-            display: block;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1 class="text-3xl font-extrabold text-center text-gray-800 mb-4">
-            Add Copyright to Image
-        </h1>
-
-        <div class="input-group">
-            <label for="imageUpload" class="text-lg">Upload Image:</label>
-            <input type="file" id="imageUpload" accept="image/*" class="w-full">
-        </div>
-
-        <div class="input-group">
-            <label for="copyrightText" class="text-lg">Copyright Text:</label>
-            <input type="text" id="copyrightText" value="©Pooja" placeholder="e.g., © 2025 Your Name" class="w-full">
-        </div>
-
-        <div class="input-group">
-            <label for="textColor" class="text-lg">Text Color:</label>
-            <input type="color" id="textColor" value="#FFFFFF" class="w-full h-12">
-        </div>
-
-        <div class="input-group">
-            <label for="textSize" class="text-lg">Text Size:</label>
-            <input type="range" id="textSize" min="10" max="100" value="30" class="w-full">
-            <span id="textSizeValue" class="text-sm text-gray-600 mt-1 block">30px</span>
-        </div>
-   <!-- Rotation -->
-                    <div>
-                        <div class="flex justify-between items-center">
-                            <label for="rotation" class="text-sm font-medium text-gray-700">Rotation</label>
-                            <span id="rotationValue" class="text-sm font-mono bg-gray-200 text-gray-800 px-2 py-1 rounded-md">0°</span>
-                        </div>
-                        <input type="range" id="rotation" min="-180" max="180" value="90" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer">
-                    </div>
-        <div class="flex justify-center mt-4">
-            <button id="downloadBtn" class="btn btn-primary">
-                Download Image
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-download">
-                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
-                    <polyline points="7 10 12 15 17 10"/>
-                    <line x1="12" x2="12" y1="15" y2="3"/>
-                </svg>
-            </button>
-        </div>
-
-        <div class="message-box" id="messageBox"></div>
-
-        <h2 class="text-xl font-semibold text-gray-700 mt-6 mb-3 text-center">Preview:</h2>
-        <canvas id="imageCanvas" class="w-full h-auto"></canvas>
-    </div>
-
-    <script>
-        // Get references to DOM elements
-        const imageUpload = document.getElementById('imageUpload');
-        const copyrightText = document.getElementById('copyrightText');
-        const textColor = document.getElementById('textColor');
-        const textSize = document.getElementById('textSize');
-        const textSizeValue = document.getElementById('textSizeValue');
-        const rotation = document.getElementById('rotation');
-        const rotationValue = document.getElementById('rotationValue');
-        const downloadBtn = document.getElementById('downloadBtn');
-        const imageCanvas = document.getElementById('imageCanvas');
-        const ctx = imageCanvas.getContext('2d');
-        const messageBox = document.getElementById('messageBox');
-
-        let originalImage = null;
-        let textX = 0;
-        let textY = 0;
-        let isDragging = false;
-        let offsetX, offsetY;
-        let originalUploadedFileName = ''; // Variable to store the original filename
-
-        // Function to display messages to the user
-        function showMessage(message, type = 'warning') {
-            messageBox.textContent = message;
-            messageBox.className = `message-box show bg-${type === 'error' ? 'red' : 'yellow'}-100 border-${type === 'error' ? 'red' : 'yellow'}-400 text-${type === 'error' ? 'red' : 'yellow'}-700`;
-            setTimeout(() => {
-                messageBox.classList.remove('show');
-            }, 5000);
-        }
-
-        // Function to draw the image and copyright text on the canvas
-        function drawImageWithCopyright() {
-            if (!originalImage) {
-                ctx.clearRect(0, 0, imageCanvas.width, imageCanvas.height);
-                imageCanvas.width = 0;
-                imageCanvas.height = 0;
-                return;
-            }
-
-            imageCanvas.width = originalImage.width;
-            imageCanvas.height = originalImage.height;
-
-            ctx.clearRect(0, 0, imageCanvas.width, imageCanvas.height);
-            ctx.drawImage(originalImage, 0, 0, imageCanvas.width, imageCanvas.height);
-
-            const text = copyrightText.value.trim();
-            if (text === "") {
-                return;
-            }
-
-            const size = parseInt(textSize.value);
-            const color = textColor.value;
-            const angle = parseInt(rotation.value);
-
-            ctx.save();
-            ctx.font = `${size}px "Happy Monkey", cursive`;
-            ctx.fillStyle = color;
-            ctx.textAlign = 'left';
-            ctx.textBaseline = 'alphabetic';
-
-            ctx.shadowColor = 'rgba(0, 0, 0, 0.7)';
-            ctx.shadowBlur = 5;
-            ctx.shadowOffsetX = 2;
-            ctx.shadowOffsetY = 2;
-            
-            ctx.translate(textX, textY);
-            ctx.rotate(angle * Math.PI / 180);
-            ctx.fillText(text, 0, 0);
-
-            ctx.restore();
-
-            ctx.shadowColor = 'transparent';
-            ctx.shadowBlur = 0;
-            ctx.shadowOffsetX = 0;
-            ctx.shadowOffsetY = 0;
-        }
-
-        // Initialize text position to bottom-right when image is loaded or text/size changes
-        function initializeTextPosition() {
-            if (originalImage) {
-                const padding = 20;
-                const size = parseInt(textSize.value);
-                ctx.font = `${size}px "Happy Monkey", cursive`;
-                const textMetrics = ctx.measureText(copyrightText.value.trim());
-
-                textX = originalImage.width - padding - textMetrics.width;
-                textY = originalImage.height - padding;
-            }
-        }
-
-        // Event listener for image upload
-        imageUpload.addEventListener('change', (event) => {
-            const file = event.target.files[0];
-            if (file) {
-                originalUploadedFileName = file.name; // Store the original file name here
-                const reader = new FileReader();
-                reader.onload = (e) => {
-                    const img = new Image();
-                    img.onload = () => {
-                        originalImage = img;
-                        initializeTextPosition();
-                        drawImageWithCopyright();
-                    };
-                    img.onerror = () => {
-                        showMessage("Error loading image. Please try a different file.", "error");
-                    };
-                    img.src = e.target.result;
-                };
-                reader.onerror = () => {
-                    showMessage("Error reading file.", "error");
-                };
-                reader.readAsDataURL(file);
-            } else {
-                originalImage = null;
-                originalUploadedFileName = ''; // Clear filename if no file is selected
-                ctx.clearRect(0, 0, imageCanvas.width, imageCanvas.height);
-                imageCanvas.width = 0;
-                imageCanvas.height = 0;
-            }
-        });
-
-        // Event listeners for copyright text, color, and size changes
-        copyrightText.addEventListener('input', () => {
-            if (originalImage) {
-                initializeTextPosition();
-            }
-            drawImageWithCopyright();
-        });
-        textColor.addEventListener('input', drawImageWithCopyright);
-        textSize.addEventListener('input', () => {
-            textSizeValue.textContent = `${textSize.value}px`;
-            if (originalImage) {
-                initializeTextPosition();
-            }
-            drawImageWithCopyright();
-        });
-        rotation.addEventListener('input', () => {
-            rotationValue.textContent = `${rotation.value}°`;
-            drawImageWithCopyright();
-        });
-
-        // Helper function to get scaled mouse/touch coordinates
-        function getScaledCoordinates(e) {
-            const rect = imageCanvas.getBoundingClientRect();
-            const scaleX = imageCanvas.width / rect.width;
-            const scaleY = imageCanvas.height / rect.height;
-
-            let clientX, clientY;
-            if (e.touches && e.touches.length > 0) {
-                clientX = e.touches[0].clientX;
-                clientY = e.touches[0].clientY;
-            } else {
-                clientX = e.clientX;
-                clientY = e.clientY;
-            }
-
-            const mouseX = (clientX - rect.left) * scaleX;
-            const mouseY = (clientY - rect.top) * scaleY;
-            return { mouseX, mouseY };
-        }
-
-        // Mouse event listeners for dragging the text
-        imageCanvas.addEventListener('mousedown', (e) => {
-            if (!originalImage) return;
-            const { mouseX, mouseY } = getScaledCoordinates(e);
-
-            const text = copyrightText.value.trim();
-            if (text === "") return;
-
-            const size = parseInt(textSize.value);
-            ctx.font = `${size}px "Happy Monkey", cursive`;
-            const textMetrics = ctx.measureText(text);
-            const textWidth = textMetrics.width;
-            const textHeight = textMetrics.actualBoundingBoxAscent + textMetrics.actualBoundingBoxDescent;
-
-            if (mouseX >= textX && mouseX <= textX + textWidth &&
-                mouseY >= textY - textMetrics.actualBoundingBoxAscent && mouseY <= textY + textMetrics.actualBoundingBoxDescent) {
-                isDragging = true;
-                imageCanvas.classList.add('dragging');
-                offsetX = mouseX - textX;
-                offsetY = mouseY - textY;
-            }
-        });
-
-        imageCanvas.addEventListener('mousemove', (e) => {
-            if (!isDragging) return;
-            const { mouseX, mouseY } = getScaledCoordinates(e);
-
-            let newTextX = mouseX - offsetX;
-            let newTextY = mouseY - offsetY;
-
-            const text = copyrightText.value.trim();
-            const size = parseInt(textSize.value);
-            ctx.font = `${size}px "Happy Monkey", cursive`;
-            const textMetrics = ctx.measureText(text);
-            const textWidth = textMetrics.width;
-            const textAscent = textMetrics.actualBoundingBoxAscent;
-            const textDescent = textMetrics.actualBoundingBoxDescent;
-
-            if (newTextX < 0) newTextX = 0;
-            if (newTextX + textWidth > imageCanvas.width) newTextX = imageCanvas.width - textWidth;
-
-            if (newTextY - textAscent < 0) newTextY = textAscent;
-            if (newTextY + textDescent > imageCanvas.height) newTextY = imageCanvas.height - textDescent;
-
-            textX = newTextX;
-            textY = newTextY;
-            drawImageWithCopyright();
-        });
-
-        imageCanvas.addEventListener('mouseup', () => {
-            isDragging = false;
-            imageCanvas.classList.remove('dragging');
-        });
-
-        // Handle touch events for dragging on mobile devices
-        imageCanvas.addEventListener('touchstart', (e) => {
-            e.preventDefault();
-            const { mouseX, mouseY } = getScaledCoordinates(e);
-
-            const text = copyrightText.value.trim();
-            if (text === "") return;
-
-            const size = parseInt(textSize.value);
-            ctx.font = `${size}px "Happy Monkey", cursive`;
-            const textMetrics = ctx.measureText(text);
-            const textWidth = textMetrics.width;
-            const textAscent = textMetrics.actualBoundingBoxAscent;
-            const textDescent = textMetrics.actualBoundingBoxDescent;
-
-            if (mouseX >= textX && mouseX <= textX + textWidth &&
-                mouseY >= textY - textAscent && mouseY <= textY + textDescent) {
-                isDragging = true;
-                imageCanvas.classList.add('dragging');
-                offsetX = mouseX - textX;
-                offsetY = mouseY - textY;
-            }
-        });
-
-        imageCanvas.addEventListener('touchmove', (e) => {
-            e.preventDefault();
-            if (!isDragging) return;
-            const { mouseX, mouseY } = getScaledCoordinates(e);
-
-            let newTextX = mouseX - offsetX;
-            let newTextY = mouseY - offsetY;
-
-            const text = copyrightText.value.trim();
-            const size = parseInt(textSize.value);
-            ctx.font = `${size}px "Happy Monkey", cursive`;
-            const textMetrics = ctx.measureText(text);
-            const textWidth = textMetrics.width;
-            const textAscent = textMetrics.actualBoundingBoxAscent;
-            const textDescent = textMetrics.actualBoundingBoxDescent;
-
-            if (newTextX < 0) newTextX = 0;
-            if (newTextX + textWidth > imageCanvas.width) newTextX = imageCanvas.width - textWidth;
-
-            if (newTextY - textAscent < 0) newTextY = textAscent;
-            if (newTextY + textDescent > imageCanvas.height) newTextY = imageCanvas.height - textDescent;
-
-            textX = newTextX;
-            textY = newTextY;
-            drawImageWithCopyright();
-        });
-
-        imageCanvas.addEventListener('touchend', () => {
-            isDragging = false;
-            imageCanvas.classList.remove('dragging');
-        });
-
-
-        // Event listener for download button
-        downloadBtn.addEventListener('click', () => {
-            if (!originalImage) {
-                showMessage("Please upload an image first to download.", "error");
-                return;
-            }
-
-            let downloadFileName = 'copyrighted_image.png'; // Fallback name
-
-            if (originalUploadedFileName) {
-                const parts = originalUploadedFileName.split('.');
-                const name = parts.slice(0, -1).join('.');
-                const extension = parts.length > 1 ? parts.pop() : 'png';
-
-                // Construct the new filename with '_copyrighted' appended
-                downloadFileName = `${name}_copyrighted.${extension}`;
-            }
-
-            const link = document.createElement('a');
-            link.download = downloadFileName; // Use the constructed filename
-            link.href = imageCanvas.toDataURL('image/png');
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        });
-
-        // Initial update for text size and rotation display
-        textSizeValue.textContent = `${textSize.value}px`;
-        rotationValue.textContent = `${rotation.value}°`;
-        
-        // Initial drawing to set up canvas with default values if no image is loaded
-        drawImageWithCopyright();
-
-        // Ensure canvas is resized and redrawn if window size changes (though image dimensions are fixed)
-        window.addEventListener('resize', drawImageWithCopyright);
-    </script>
-</body>
-</html>
+            border-radius: 0.75rem
